# 2023-11-28-refactor-homework-art3xa

./: README.md  pyproject.toml
.github/workflows/: app.yml
renamer/: __init__.py  errors.py  file.py  folder.py  move.py  mover.py  project.py  rename.py  renamer.py
renamer/base/: __init__.py  exceptions.py  file.py  folder.py  project.py  resource.py
renamer/transformers/move/: __init__.py  add_function_def.py  add_import.py  remove_class_def.py  remove_def_base.py  remove_function_def.py  replace_import_and_call.py
renamer/transformers/rename/: __init__.py  base.py  call.py  class_def.py  function_def.py  import_alias.py  name.py
tests/: test_file.py  test_folder.py  test_move_class.py  test_move_func.py  test_project.py  test_rename_class_name.py  test_rename_func_arg.py  test_rename_func_name.py  test_resource.py
tests/base/: test_file.py  test_folder.py  test_project.py  test_resource.py
tests/fixtures/move/class/move/: expected.py  expected2.py  expected3.py
tests/fixtures/move/func/add/: expected.py  expected2.py
tests/fixtures/move/func/move/: expected.py  expected2.py  expected3.py
tests/fixtures/move/func/move2/: expected2.py
tests/fixtures/rename/class/arg/: expected.py
tests/fixtures/rename/class/name/: expected.py
tests/fixtures/rename/class/name_with_import/: expected2.py
tests/fixtures/rename/class/name_with_import_alias/: expected2.py
tests/fixtures/rename/class/name_with_import_alias_module/: expected.py  expected2.py
tests/fixtures/rename/func/arg/: expected.py
tests/fixtures/rename/func/arg_with_import/: expected.py  (+1 more)
(+28 files in other folders)
